# efficient_PO

./: .gitignore  env.sh  pyproject.toml
dvd_stack/: captioner.py  codex_infer.py  data_provider.py  dvd_backend.py  dvd_caption_worker.py  dvd_captioning.py  dvd_prompt.py
dvd_stack/dvd/dvd/: build_database.py  config.py  dvd_core.py  frame_caption.py  func_call_shema.py  prompts.py  utils.py
dvd_stack/providers/: __init__.py  base.py  egolife.py  hourvideo.py  lvbench.py  registry.py  videomme.py
src/dvd_eval/: __init__.py  config.py  instrumentation.py  schemas.py
src/dvd_eval/cache/: caption_cache.py
src/dvd_eval/captioning/: __init__.py  base.py  candidate_captions.py  qwen25_vl.py
src/dvd_eval/evaluation/: __init__.py  dvd_qa.py  full_rollout.py  rollout_evaluator.py
src/dvd_eval/mixed_views/: __init__.py  builder.py
src/dvd_eval/references/: __init__.py  extractor.py
src/surrogate_rollout/: config.py  instrumentation.py
src/surrogate_rollout/cache/: __init__.py  caption_cache.py
src/surrogate_rollout/captioning/: candidate_captions.py
src/surrogate_rollout/evaluation/: dvd_qa.py  full_rollout.py  qa_metrics.py  rollout_evaluator.py
src/surrogate_rollout/mixed_views/: __init__.py  builder.py
src/surrogate_rollout/references/: extractor.py
