[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dvd-evaluator"
version = "0.1.0"
description = "Shared DVD caption+QA evaluator substrate (public). Method (B) and baseline (C) both depend on this; it never imports either."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["surrogate_rollout*"]
